[package]
name = "tagbot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# serenity = {version = "0.11.6", features = ["voice"]}
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
poise = {version = "0.5.6"}
env_logger= "0.10.0"